# opengl-sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  premake5.lua
src/: main.cpp
